Fixed alignment with navbar

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -413,6 +413,6 @@ table {
     color: rgba(212, 20, 67, 1);
   }
   .logo-menu-container {
-    width:70%;
+    width:65%;
   }
 }
